# discord-bot

./: Cargo.toml  README.md  wrangler.toml
.github/workflows/: checks.yml  deploy.yml
src/: bot.rs  command.rs  embed.rs  error.rs  http.rs  interaction.rs  lib.rs  verification.rs
src/commands/: lookup.rs  mod.rs  ping.rs  recent.rs  search.rs
src/helpers/: asset.rs  casing.rs  mod.rs
