[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.69"
cfg-if = "1.0.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.13"
thiserror = "1.0.40"
worker = "0.0.17"
